--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jams.attendencesystem">
+    package="com.jams.attendencesystem" >
 
     <application
         android:allowBackup="true"
@@ -8,10 +8,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AttendenceSystem">
-        <activity android:name=".EmployeeLogin"></activity>
+        android:theme="@style/Theme.AttendenceSystem" >
+        <activity
+            android:name=".Register"
+            android:exported="false"
+            android:label="@string/title_activity_register"
+            android:theme="@style/Theme.AttendenceSystem.NoActionBar" />
+        <activity android:name=".EmployeeLogin" />
         <activity android:name=".EmployeeDashboard" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
